# import-benzara

./: .gitattributes  .gitignore  README.md  generate_latest_stock_feed.py  pyproject.toml  requirements.txt  wsgi.py
config/: config.example.json
data/inbox/: FTP Benzara JUNE (15-06-2026).xlsx  horpachcom.WordPress.2026-06-24.xml  latest.xml
data/output/: decisions.csv
docs/: ANALYSIS.md  NAMECHEAP-DEPLOYMENT.md  PLAN.md  PLUGIN-NOTES.md  architecture.md  data-mapping.md
output/: products_allowed.csv  products_create_with_images.csv  products_new_image_audit.csv  products_new_manual_image_review.csv  products_removed_logistics.csv  products_update_without_images.csv
output/cache/: benzara_product_images.json  benzara_search_pages.json  checked_urls.json
output/cache_probe/: checked_urls.json
projekt-importu-benzara/: 01-cel-i-zakres.md  02-specyfikacja-funkcjonalna.md  03-specyfikacja-techniczna.md  04-model-danych.md  05-struktura-feedu-xml.md  06-ryzyka-i-zalozenia.md  07-plan-realizacji.md  08-otwarte-pytania.md  09-specyfikacja-zrodel-benzara.md  10-specyfikacja-importu-stock-benzara.md  README.md
projekt-importu-benzara/reference/: analiza-pluginu.md  recommended-dropshipping-feed.xml
src/horpach_benzara/: __init__.py  config.py  filter_benzara.py  image_audit.py  main.py  models.py  utils.py
src/import_benzara/: __init__.py  cli.py  config.py  loaders.py  models.py  pipeline.py  reporting.py  webapp.py  (+2 more)
tests/: test_image_audit.py  test_logistics_filter.py  test_pipeline.py  test_shipping.py  test_stock_pipeline.py  test_utils.py  test_webapp.py
(+16 files in other folders)
