[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "import-benzara"
version = "0.1.0"
description = "Generator pliku wsadowego Benzara dla WP Desk Dropshipping XML WooCommerce."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "openpyxl>=3.1",
  "pandas>=2.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
